--- a/Inspectie_App/Inspectie_App/AddProjectenPage.xaml
+++ b/Inspectie_App/Inspectie_App/AddProjectenPage.xaml
@@ -4,56 +4,61 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="Inspectie_App.AddProjectenPage">
+             x:Class="Inspectie_App.AddProjectenPage"
+             xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup">
     <ContentPage.Content>
-        <StackLayout>
-        <ScrollView VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-        <Grid Margin="0,5">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="200"/>
+        <StackLayout Orientation="Vertical">
+            <ScrollView VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                <Grid x:Name="AddProjectGird" Margin="0,5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="200"/>
                 
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="400" />
-                <ColumnDefinition Width="400"/>
-            </Grid.ColumnDefinitions>
-            <Picker Grid.Row="0" Grid.Column="0" x:Name="AddProjectPicker" BackgroundColor="LightGray" Title="Projectnaam" TitleColor="Black"></Picker>
-            <Button Grid.Row="0" Grid.Column="1" Text="+"  BackgroundColor="#008CAC" TextColor="White" HorizontalOptions="Start" VerticalOptions="CenterAndExpand"  x:Name="AddProjectBtn" Clicked="AddProjectBtn_Clicked"/>
-            <Picker Grid.Row="1" Grid.Column="0" x:Name="AddGebiedPicker" BackgroundColor="LightGray" Title="Gebiednaam" TitleColor="Black"/>
-            <Button Grid.Row="1" Grid.Column="1" Text="+" x:Name="AddGebiedBtn" TextColor="White" BackgroundColor="#008CAC" HorizontalOptions="Start" VerticalOptions="CenterAndExpand"  Clicked="AddGebiedBtn_Clicked"/>
-            <Picker Grid.Row="2" Grid.Column="0" x:Name="AddGebouwPicker" BackgroundColor="LightGray" Title="Gebouwnaam" TitleColor="Black"/>
-            <Button Grid.Row="2" Grid.Column="1" Text="+" x:Name="AddGebouwBtn" BackgroundColor="#008CAC" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" TextColor="White" Clicked="AddGebouwBtn_Clicked"/>
-            <Label Grid.Row="3"  Grid.Column="0" Text="Verdieping" />
-            <Button Grid.Row="3" Grid.Column="1" Text="+" x:Name="AddVerdiepingBtn" BackgroundColor="#008CAC" HorizontalOptions="Start" VerticalOptions="Start" TextColor="White" Clicked="AddVerdiepingBtn_Clicked"/>
-            <Button Grid.Row="4" Grid.Column="1" ImageSource="rsz_2deleteicon" x:Name="DltVerdiepingBtn" BackgroundColor="#008CAC" HorizontalOptions="Start" VerticalOptions="Start" TextColor="White" Clicked="DltVerdiepingBtn_Clicked"/>
-            <ListView Grid.Row="4" Grid.Column="0" BackgroundColor="Gray" x:Name="VerdiepingList" HorizontalOptions="EndAndExpand" VerticalOptions="Center" HasUnevenRows="True">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <Grid Margin="0,5">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto"/>
-                                    <ColumnDefinition Width="auto"/>
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="auto"></RowDefinition>
-                                    <RowDefinition Height="auto"></RowDefinition>
-                                    <RowDefinition Height="*"></RowDefinition>
-                                </Grid.RowDefinitions>
-                                <Label Grid.Row="0" Grid.Column="0" Text="asd" FontAttributes="Bold" MinimumHeightRequest="1"/>
-                                <Label Grid.Row="0" Grid.Column="0" Text="abd" TextColor="Black"/>
-                            </Grid>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="100"/>
+                    </Grid.ColumnDefinitions>
+                    <Picker Grid.Row="0" Grid.Column="0" x:Name="AddProjectPicker" BackgroundColor="LightGray" Title="Projectnaam" TitleColor="Black"></Picker>
+                    <Button Grid.Row="0" Grid.Column="1" Text="+"  BackgroundColor="#008CAC" TextColor="White" HorizontalOptions="Start" VerticalOptions="CenterAndExpand"  x:Name="AddProjectBtn" Clicked="AddProjectBtn_Clicked"/>
+                    <Button Grid.Row="0" Grid.Column="2" ImageSource="rsprojectediticon" BackgroundColor="#008CAC" TextColor="White" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" x:Name="EditprojectsBtn" Clicked="EditprojectsBtn_Clicked_1"/>
+                    <Picker Grid.Row="1" Grid.Column="0" x:Name="AddGebiedPicker" BackgroundColor="LightGray" Title="Gebiednaam" TitleColor="Black"/>
+                    <Button Grid.Row="1" Grid.Column="1" Text="+" x:Name="AddGebiedBtn" TextColor="White" BackgroundColor="#008CAC" HorizontalOptions="Start" VerticalOptions="CenterAndExpand"  Clicked="AddGebiedBtn_Clicked"/>
+                    <Button Grid.Row="1" Grid.Column="2" ImageSource="rsprojectediticon" BackgroundColor="#008CAC" TextColor="White" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" x:Name="EditAreaBtn" Clicked="EditAreaBtn_Clicked"/>
+                    <Picker Grid.Row="2" Grid.Column="0" x:Name="AddGebouwPicker" BackgroundColor="LightGray" Title="Gebouwnaam" TitleColor="Black"/>
+                    <Button Grid.Row="2" Grid.Column="1" Text="+" x:Name="AddGebouwBtn" BackgroundColor="#008CAC" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" TextColor="White" Clicked="AddGebouwBtn_Clicked"/>
+                    <Button Grid.Row="2" Grid.Column="2" ImageSource="rsprojectediticon" BackgroundColor="#008CAC" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" x:Name="EditBuildingBtn" Clicked="EditBuildingBtn_Clicked"/>
+                    <Label Grid.Row="3"  Grid.Column="0" Text="Verdieping" />
+                    <Button Grid.Row="3" Grid.Column="1" Text="+" x:Name="AddVerdiepingBtn" BackgroundColor="#008CAC" HorizontalOptions="Start" VerticalOptions="Start" TextColor="White" Clicked="AddVerdiepingBtn_Clicked"/>
+                    <Button Grid.Row="4" Grid.Column="1" ImageSource="rsz_2deleteicon" x:Name="DltVerdiepingBtn" BackgroundColor="#008CAC" HorizontalOptions="Start" VerticalOptions="Start" TextColor="White" Clicked="DltVerdiepingBtn_Clicked"/>
+                    <ListView Grid.Row="4" Grid.Column="0" BackgroundColor="Gray" x:Name="VerdiepingList" HorizontalOptions="Fill" VerticalOptions="Center" HasUnevenRows="True">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <ViewCell>
+                                    <Grid Margin="0,5">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="*"/>
+                                        </Grid.ColumnDefinitions>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="auto"></RowDefinition>
+                                            <RowDefinition Height="auto"></RowDefinition>
+                                            <RowDefinition Height="*"></RowDefinition>
+                                        </Grid.RowDefinitions>
+                                        <Label Grid.Row="0" Grid.Column="0" Text="asd" FontAttributes="Bold" MinimumHeightRequest="1"/>
+                                        <Label Grid.Row="0" Grid.Column="0" Text="abd" TextColor="Black"/>
+                                    </Grid>
+                                </ViewCell>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
                 
-            </ListView>
-        </Grid>
-        </ScrollView>
+                    </ListView>
+                </Grid>
+            </ScrollView>
         </StackLayout>
 
     </ContentPage.Content>
