--- a/Inspectie_App/Inspectie_App/AddProjectenPage.xaml
+++ b/Inspectie_App/Inspectie_App/AddProjectenPage.xaml
@@ -11,10 +11,10 @@
             <ScrollView VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
                 <Grid x:Name="AddProjectGird" Margin="0,5">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="75"/>
+                        <RowDefinition Height="75"/>
+                        <RowDefinition Height="75"/>
+                        <RowDefinition Height="75"/>
                         <RowDefinition Height="200"/>
                 
                     </Grid.RowDefinitions>
@@ -23,36 +23,46 @@
                         <ColumnDefinition Width="100"/>
                         <ColumnDefinition Width="100"/>
                     </Grid.ColumnDefinitions>
-                    <Picker Grid.Row="0" Grid.Column="0" x:Name="AddProjectPicker" BackgroundColor="LightGray" Title="Projectnaam" TitleColor="Black"></Picker>
+                    
+                    <ListView Grid.Row="0" Grid.Column="0" x:Name="AddProjectList" ItemsSource="{Binding Project}"  BackgroundColor="LightGray" ItemSelected="AddProjectList_ItemSelected" >
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <TextCell Text="{Binding ProjectName}"/>
+                                <!--<TextCell Text="Abdi"/>-->
+                                
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
                     <Button Grid.Row="0" Grid.Column="1" Text="+"  BackgroundColor="#008CAC" TextColor="White" HorizontalOptions="Start" VerticalOptions="CenterAndExpand"  x:Name="AddProjectBtn" Clicked="AddProjectBtn_Clicked"/>
                     <Button Grid.Row="0" Grid.Column="2" ImageSource="rsprojectediticon" BackgroundColor="#008CAC" TextColor="White" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" x:Name="EditprojectsBtn" Clicked="EditprojectsBtn_Clicked_1"/>
-                    <Picker Grid.Row="1" Grid.Column="0" x:Name="AddGebiedPicker" BackgroundColor="LightGray" Title="Gebiednaam" TitleColor="Black"/>
-                    <Button Grid.Row="1" Grid.Column="1" Text="+" x:Name="AddGebiedBtn" TextColor="White" BackgroundColor="#008CAC" HorizontalOptions="Start" VerticalOptions="CenterAndExpand"  Clicked="AddGebiedBtn_Clicked"/>
+
+                    <ListView Grid.Row="1" Grid.Column="0" x:Name="AddGebiedList" BackgroundColor="LightGray">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <TextCell Text="{Binding AreaName}"/>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                        <Button Grid.Row="1" Grid.Column="1" Text="+" x:Name="AddGebiedBtn" TextColor="White" BackgroundColor="#008CAC" HorizontalOptions="Start" VerticalOptions="CenterAndExpand"  Clicked="AddGebiedBtn_Clicked"/>
                     <Button Grid.Row="1" Grid.Column="2" ImageSource="rsprojectediticon" BackgroundColor="#008CAC" TextColor="White" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" x:Name="EditAreaBtn" Clicked="EditAreaBtn_Clicked"/>
-                    <Picker Grid.Row="2" Grid.Column="0" x:Name="AddGebouwPicker" BackgroundColor="LightGray" Title="Gebouwnaam" TitleColor="Black"/>
+
+                    <ListView Grid.Row="2" Grid.Column="0" x:Name="AddGebouwList" BackgroundColor="LightGray">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <TextCell Text="{Binding BuildingName}"/>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
                     <Button Grid.Row="2" Grid.Column="1" Text="+" x:Name="AddGebouwBtn" BackgroundColor="#008CAC" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" TextColor="White" Clicked="AddGebouwBtn_Clicked"/>
                     <Button Grid.Row="2" Grid.Column="2" ImageSource="rsprojectediticon" BackgroundColor="#008CAC" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" x:Name="EditBuildingBtn" Clicked="EditBuildingBtn_Clicked"/>
+                    
                     <Label Grid.Row="3"  Grid.Column="0" Text="Verdieping" />
                     <Button Grid.Row="3" Grid.Column="1" Text="+" x:Name="AddVerdiepingBtn" BackgroundColor="#008CAC" HorizontalOptions="Start" VerticalOptions="Start" TextColor="White" Clicked="AddVerdiepingBtn_Clicked"/>
                     <Button Grid.Row="4" Grid.Column="1" ImageSource="rsz_2deleteicon" x:Name="DltVerdiepingBtn" BackgroundColor="#008CAC" HorizontalOptions="Start" VerticalOptions="Start" TextColor="White" Clicked="DltVerdiepingBtn_Clicked"/>
                     <ListView Grid.Row="4" Grid.Column="0" BackgroundColor="Gray" x:Name="VerdiepingList" HorizontalOptions="Fill" VerticalOptions="Center" HasUnevenRows="True">
                         <ListView.ItemTemplate>
                             <DataTemplate>
-                                <ViewCell>
-                                    <Grid Margin="0,5">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*"/>
-                                            <ColumnDefinition Width="*"/>
-                                        </Grid.ColumnDefinitions>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="auto"></RowDefinition>
-                                            <RowDefinition Height="auto"></RowDefinition>
-                                            <RowDefinition Height="*"></RowDefinition>
-                                        </Grid.RowDefinitions>
-                                        <Label Grid.Row="0" Grid.Column="0" Text="asd" FontAttributes="Bold" MinimumHeightRequest="1"/>
-                                        <Label Grid.Row="0" Grid.Column="0" Text="abd" TextColor="Black"/>
-                                    </Grid>
-                                </ViewCell>
+                                <TextCell Text="{Binding FloorName}"/>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                 
